Separate integration tests from unit test run; fix flaky test; add Javadoc
CI unit-test fix:
- The "Run unit tests" step ran ./gradlew test, which executed the
  @Tag("integration") Testcontainers tests. Docker IS available in CI, so
  @EnabledIfDockerAvailable did not skip them, and the MinIO container failed
  to pull (pinned image tag RELEASE.2024-01-01T00-00-00Z no longer exists ->
  NotFoundException).
- The root `test` task now excludes the "integration" tag; a dedicated
  `integrationTest` task runs only integration-tagged tests. CI's integration
  job now calls :spring-boot-starter-redis:integrationTest and
  :spring-boot-starter-minio:integrationTest.
- Updated the MinIO test image to a valid tag (RELEASE.2025-07-23T15-54-02Z).

Flaky unit test fix:
- HealthDetails.build() returned Map.copyOf(), which has no iteration-order
  guarantee, so HealthDetailsTest.should_preserveInsertionOrder was
  order-dependent. Now returns an unmodifiable LinkedHashMap copy, preserving
  the insertion order the class (and test) intends.

Javadoc:
- Documented the public API across all library modules: interface methods and
  params (StorageService), configuration-property accessors, exception and
  auto-configuration constructors, health indicators, and annotation elements.
  Fixes all ~300 missing-doc warnings.
- Example apps are demonstration code and not published, so their Javadoc task
  is disabled.
- RedisUtil/RedisLockUtil (internal helpers over the deprecated byte[]
  RedisConnection API) are excluded from generated Javadoc; runtime code is
  untouched. Remaining warnings are third-party deprecation/unchecked/removal
  notes the Javadoc tool surfaces from its compile pass and cannot be told to
  suppress. Javadoc now builds cleanly (0 doc warnings, down from 338).